# ClipStack

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
docs/: index.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cleanup.rs  clipboard_monitor.rs  commands.rs  main.rs  settings.rs  storage.rs  tray.rs  window.rs
src/components/: HistoryList.tsx  HistoryRow.tsx  OverlayShell.tsx  SearchInput.tsx  SnippetsPanel.tsx
src/hooks/: useClipboardHistory.ts  useKeyboardNavigation.ts
src/lib/: tauri.ts
src/styles/: theme.css
