[package]
name = "clipstack"
version = "0.1.0"
description = "A fast, fully local clipboard manager for Windows."
authors = ["OpenAI Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
dirs = "6.0.0"
image = { version = "0.25.8", default-features = false, features = ["png"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tauri = { version = "=2.11.0", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
windows-sys = { version = "0.59.0", features = ["Win32_UI_Input_KeyboardAndMouse"] }
